some style fixes + fix jumping to today

--- a/src/Components/ReactBigCalendar/Components/InformationContainer/InformationContainer.module.css
+++ b/src/Components/ReactBigCalendar/Components/InformationContainer/InformationContainer.module.css
@@ -45,18 +45,20 @@
 }
 
 .save_btn{
-    padding: 3px 10px;
+    padding: 5px 10px;
     border-radius: 4px;
     background-color: #1890ff;
     color: #fff;
     border: none;
+    font-size: 16px;
+    cursor: pointer;
 }
 
 .select_work_time_container{
     text-align: left;
 }
 .work_time_selector{
-    margin-left: 10px;
+    margin-left: 5px;
     background-color: #fff;
 }
 .work_time_selector > div{
@@ -67,4 +69,8 @@
 }
 .work_time_selector > fieldset{
     top: 0
+}
+.selector_container{
+    display: flex;
+    align-items: center;
 }
